--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node server/src/",
-    "build": "cd server && npm install && cd src/config/database && ts-node init.ts && cd ../../../../client && npm install && npm run build"
+    "build": "cd server && npm install && cd src/config/database && ts-node init.ts && cd ../../../../client && npm install && npm run build",
+    "dev": "concurrently \"cd server && npm start\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
